fixes possible translation errors

--- a/r2/r2/templates/commentreplybox.html
+++ b/r2/r2/templates/commentreplybox.html
@@ -59,7 +59,7 @@
     <div id="marktoggle_${thing.link_name}" 
          class="help-toggle">
       <a id="marklink_${thing.link_name}" href='#' 
-         onclick="return helpon(this, 'markhelp_', '${_('hide help')}');">
+         onclick='return helpon(this, "markhelp_", "${_('hide help')}");'>
         ${_("help")}
       </a>
     </div>
