--- a/r2/r2/templates/reddit.html
+++ b/r2/r2/templates/reddit.html
@@ -98,9 +98,9 @@
   window.onpageshow = function(evt) {
     if (evt.persisted) init()
   };
-  var _global_fetching_tag = '${_("fetching title...")}';
-  var _global_submitting_tag = '${_("submitting...")}';
-  var _global_loading_tag = '${_("loading...")}';
+  var _global_fetching_tag = "${_('fetching title...')}";
+  var _global_submitting_tag = "${_('submitting...')}";
+  var _global_loading_tag = "${_('loading...')}";
 
 </%def>
 
