--- a/r2/r2/templates/subredditbox.html
+++ b/r2/r2/templates/subredditbox.html
@@ -33,7 +33,7 @@
       ${thing.title} 
       <input type="hidden" name="dest" value="${request.fullpath}"/>
       <input type="submit" name="submit" 
-             value='${_("save edits")}' id="subscr_sub"
+             value="${_('save edits')}" id="subscr_sub"
              style="display: none" />
     </h4>
     <h5>${thing.subtitle}</h5>
