--- a/r2/r2/templates/subredditinfobar.html
+++ b/r2/r2/templates/subredditinfobar.html
@@ -37,7 +37,7 @@
               <input type="hidden" name="toggled_action" value="sub"/>
               <input type="hidden" name="action" value="unsub"/>
               <input type="hidden" name="toggled_label"  
-                     value='${_("subscribe")}'/>
+                     value="${_('subscribe')}"/>
               <a onclick="return toggle(this, 'subscribe');" href="#">
                 ${_("unsubscribe")}
               </a>
@@ -45,7 +45,7 @@
               <input type="hidden" name="toggled_action" value="unsub"/>
               <input type="hidden" name="action" value="sub"/>
               <input type="hidden" name="toggled_label"  
-                     value='${_("unsubscribe")}'/>
+                     value="${_('unsubscribe')}"/>
               <a onclick="return toggle(this, 'subscribe')" href="#">
                 ${_("subscribe")}</a>
             %endif
