--- a/r2/r2/public/static/reddit.css
+++ b/r2/r2/public/static/reddit.css
@@ -606,6 +606,7 @@ before enabling */
 .md > * { margin-bottom: 0px }
 .md strong { font-weight: bold; }
 .md em { font-style: italic; }
+.md strong em { font-style: italic; font-weight: bold }
 .md img { display: none }
 .md ol, .md ul { margin: 10px 2em; }
 .md ul { list-style: disc outside }
